# aus-auto-arbitrage

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
Vertex Workbench/: Auto_Arbitrage_ML.ipynb
auto_arbitrage/: .user.yml  dbt_project.yml
auto_arbitrage/models/marts/: dim_location.sql  dim_vehicle.sql  fact_listings.sql  schema.yml
auto_arbitrage/models/staging/: sources.yml  stg_vehicle_listings.sql
dags/: vehicle_arbitrage_dag.py
scripts/: ingest_kaggle_to_bq.py
scripts/bigQuery/: CylinderCheck.sql  NullHunt.sql  POA.sql
