[project]
name = "aus-auto-arbitrage-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.41.0",
    "kagglehub>=1.0.1",
    "pandas>=3.0.2",
    "pandas-gbq>=0.35.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
]
